# PyTorch-Ultimate-2023---From-Basics-to-Cutting-Edge

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
015_NeuralNetworkFromScratch/: dot_product_final.ipynb  dot_product_start.ipynb  nn_scratch_end.ipynb  nn_scratch_start.ipynb  nn_scratch_start.py
020_TensorIntro/: Tensors.ipynb  tensors.ipynb
030_ModelingIntroduction/: 00_LinRegFromScratch_end.ipynb  00_LinRegFromScratch_start.ipynb  10_LinReg_ModelClass_end.ipynb  10_LinReg_ModelClass_start.ipynb  20_LinReg_Batches_end.ipynb  20_LinReg_Batches_start.ipynb  30_LinReg_DatasetDataloader_end.ipynb  40_LinReg_ModelSavingLoading_end.ipynb  40_LinReg_ModelSavingLoading_start.ipynb  50_LinReg_HyperparameterTuning_end.ipynb  50_LinReg_HyperparameterTuning_start.ipynb
045_Classification/: MultiClassClassification_end.ipynb  MultiClassClassification_start.ipynb  MultilabelClassification_end.ipynb  MultilabelClassification_start.ipynb
060_CNN_ImageClassification/: ImagePreprocessing_end.ipynb  ImagePreprocessing_start.ipynb  LayerCalculations_end.ipynb  LayerCalculations_start.ipynb
065_CNN_AudioClassification/: data_prep.ipynb  eda.ipynb  modeling.ipynb  plot_audio.ipynb
070_CNN_ObjectDetection/: ObjectDetection.ipynb
075_ObjectDetection_Yolo7/: yolo_data_prep.ipynb
076_ObjectDetection_Yolo8/: perform_pred.ipynb  perform_train.ipynb
100_CNN_StyleTransfer/: StyleTransfer_end.ipynb
120_TransferLearning/: TransferLearning_end.ipynb  TransferLearning_start.ipynb
180_LSTM/: Flights_end.ipynb  Flights_start.ipynb  FunctionApproximation_end.ipynb  (+2 more)
(+38 files in other folders)
