[project]
name = "pytorch-ultimate-2024"
version = "0.1.0"
description = "PyTorch Ultimate 2024 - From Basics to Cutting-Edge, Published by Packt Publishing"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=7.2.0",
    "kaleido>=1.2.0",
    "psutil>=7.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
]
